# Smart-Clip-MCP

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh  serve.sh  test_clip.py  技术方案.md
examples/: basic_clip.py  batch_clip.py
src/smart_clip/: __init__.py  resolver.py  server.py  utils.py
src/smart_clip/analyzer/: __init__.py  audio.py  scene.py  subtitle.py
src/smart_clip/config/: __init__.py  default.py  platforms.py
src/smart_clip/executor/: __init__.py  clipper.py
src/smart_clip/models/: __init__.py  audio.py  plan.py  result.py  subtitle.py
src/smart_clip/planner/: __init__.py  highlight.py  segmenter.py  strategy.py
src/smart_clip/planner/prompts/: __init__.py  highlight_detection.py
src/smart_clip/tools/: __init__.py  analyze_content.py  get_edit_plan.py  highlight_reel.py  repurpose.py  smart_clip.py
tests/: test_analyzer.py  test_executor.py  test_planner.py
