[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-clip-mcp"
version = "0.1.0"
description = "AI-powered smart video clipping MCP server"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Ambrose" },
]
keywords = ["mcp", "video", "clipping", "ai", "ffmpeg", "whisper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "fastmcp>=0.1.0",
    "openai>=1.0.0",
    "openai-whisper>=20231117",
    "mcp-video>=1.5.0",
    "librosa>=0.10.0",
    "scenedetect[opencv]>=0.6.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
api = [
    "ffmpeg-python>=0.2.0",
]

[project.scripts]
smart-clip-mcp = "smart_clip.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/smart_clip"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
